# ryuzi

./: .editorconfig  .gitignore  .goreleaser.yaml  .release-please-manifest.json  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  biome.json  bunfig.toml  install.sh  osv-scanner.toml  package.json  release-please-config.json  skills-lock.json  tsconfig.json
apps/cockpit/src-tauri/: .gitignore  CHANGELOG.md  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/cockpit/src-tauri/.sidecar-build/: package.json
apps/cockpit/src-tauri/binaries/: .gitignore  claude-agent-acp-x86_64-unknown-linux-gnu
apps/cockpit/src-tauri/capabilities/: default.json
apps/cockpit/src-tauri/icons/: icon.icns
apps/cockpit/src-tauri/src/: accent.rs  agent_cmd.rs  agents_cmd.rs  apps_cmd.rs  artifacts_cmd.rs  audit_cmd.rs  automation_cmd.rs  backdrop.rs  commands.rs  connections_cmd.rs  delegation_cmd.rs  endpoint_cmd.rs  engine.rs  engine_daemon.rs  engine_manager.rs  events.rs  fsview_cmd.rs  gateways_cmd.rs  learning_cmd.rs  lib.rs  main.rs  native_cmd.rs  open_cmd.rs  plugins_cmd.rs  providers_cmd.rs  registry_cmd.rs  runtimes_cmd.rs  scheduler_cmd.rs  session_io.rs  skills_cmd.rs  term.rs
crates/cli/: CHANGELOG.md  Cargo.toml  README.md  sidecar.manifest.json
crates/cli/src/: config_cmd.rs  daemon_cmd.rs  db.rs  detect.rs  dispatch.rs  doctor.rs  lib.rs  main.rs  meta.rs  orch_cmd.rs  paint.rs  plugins_cmd.rs  run_cmd.rs  serve_cmd.rs  sidecar_host.rs
crates/cli/src/tui/: controller.rs  dashboard.rs  mod.rs  render.rs  theme.rs  widgets.rs  wizard.rs
crates/cli/tests/: cli.rs  config.rs  daemon.rs  e2e_journey.rs  plugins.rs  run.rs
crates/core/: CHANGELOG.md  Cargo.toml  build.rs  sidecar.manifest.json
crates/core/plugins/catalog/: atlassian.toml  brave-search.toml  cavemem.toml  cloudflare.toml  datadog.toml  daytona.toml  e2b.toml  figma.toml  github.toml  google-workspace.toml  graphiti.toml  honcho.toml  linear.toml  mem0.toml  netlify.toml  ngrok.toml  notion.toml  render.toml  sentry.toml  slack.toml  telegram.toml  vercel-sandbox.toml  vercel.toml  zep.toml
crates/core/src/: agent_settings.rs  agentic_upgrade_compat.rs  agents.rs  approval.rs  artifacts.rs  attachments.rs  automation.rs  background_rail.rs  branches.rs  control.rs  control_token.rs  curator.rs  daemon.rs  daemon_lock.rs  daemon_status.rs  delegation.rs  domain.rs  fsview.rs  gateways.rs  learning.rs  lib.rs  mcp.rs  mentions.rs  oauth_loopback.rs  orch.rs  pairing.rs  paths.rs  policy.rs  process_util.rs  providers.rs  registry.rs  router.rs  runtime.rs  runtime_config.rs  runtimes.rs  scheduler.rs  serve.rs  sidecar.rs  skills_install.rs  stdio_jsonrpc.rs  (+6 more)
crates/core/src/agents/: bootstrap.rs  catalog.rs  free_route.rs  knowledge.rs  learning_queue.rs  mod.rs  okf.rs  personality.rs  registry.rs  transaction.rs  types.rs  yaml.rs
crates/core/src/api/: agent_api.rs  apps_api.rs  artifacts_api.rs  audit.rs  automation_api.rs  connections_api.rs  delegation_api.rs  endpoint_api.rs  extension_status_api.rs  fsview_api.rs  gateways_api.rs  learning_api.rs  mod.rs  native_api.rs  orch_api.rs  plugins_api.rs  remote_catalog_api.rs  runtimes_api.rs  scheduler_api.rs  session_io_api.rs  sessions.rs  skills_api.rs  types.rs
crates/core/src/artifacts/: service.rs  storage.rs  types.rs
crates/core/src/connector/: mod.rs
crates/core/src/control/: app_control.rs  attachments.rs  lifecycle.rs  provisioning.rs  tests.rs
crates/core/src/gateway/: mod.rs
crates/core/src/harness/: mod.rs
crates/core/src/integration/: mod.rs
crates/core/src/llm_router/: aws_stream.rs  capabilities.rs  claude_cloak.rs  client.rs  codex.rs  connections.rs  custom.rs  installed.rs  keys.rs  kiro.rs  mimo.rs  mod.rs  model_capabilities.rs  model_capability_catalog.json  model_effort.rs  model_meta.rs  model_meta_snapshot.json  models.rs  probe.rs  provenance.rs  quota.rs  registry.rs  responses.rs  routes.rs  secrets.rs  server.rs  usage.rs
crates/core/src/plugins/: atlassian_bitbucket_e2e.rs  builtin.rs  bundle.rs  catalog.rs  catalog_feed_key.rs  component_catalog.rs  declarative.rs  discord_e2e.rs  doctor.rs  host.rs  (+15 more)
crates/core/tests/: control_api.rs  kiro_device.rs  kiro_upstream.rs  native_tools_v2_regressions.rs  oauth_flow.rs  router_server.rs  secrets_e2e.rs  update_e2e.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: bundle.rs  categories.rs  lib.rs  manifest.rs  subst.rs
crates/plugin-sdk/wit/: plugin.wit
crates/runner/: CHANGELOG.md  Cargo.toml  README.md
crates/runner/src/: config_cmd.rs  daemon_cmd.rs  db.rs  dispatch.rs  doctor.rs  lib.rs  main.rs  meta.rs  pair_cmd.rs  service_cmd.rs  setup_cmd.rs  status_cmd.rs
crates/runner/tests/: cli.rs  config.rs  daemon.rs  e2e_journey.rs  plugins.rs  run.rs
plugins/anthropic/: Cargo.toml  ryuzi-plugin.toml
plugins/anthropic-format/: Cargo.toml
plugins/anthropic-format/src/: lib.rs
plugins/anthropic-oauth/: Cargo.toml  ryuzi-plugin.toml
plugins/anthropic-oauth/src/: guest.rs  lib.rs  logic.rs
plugins/anthropic-oauth/wit/: world.wit
plugins/anthropic/src/: guest.rs  lib.rs  logic.rs
plugins/anthropic/wit/: world.wit
plugins/atlassian/: Cargo.toml  ryuzi-plugin.toml
plugins/atlassian/src/: guest.rs  lib.rs  logic.rs
plugins/atlassian/wit/: world.wit
plugins/bitbucket/: Cargo.toml  ryuzi-plugin.toml
plugins/bitbucket/src/: guest.rs  lib.rs  logic.rs
plugins/bitbucket/wit/: world.wit
plugins/deepseek/: Cargo.toml  ryuzi-plugin.toml
plugins/deepseek/src/: guest.rs  lib.rs  logic.rs
plugins/deepseek/wit/: world.wit
plugins/mimo/: Cargo.toml  ryuzi-plugin.toml
plugins/mimo/src/: guest.rs  lib.rs  logic.rs
plugins/mimo/wit/: world.wit
plugins/openai/: Cargo.toml  ryuzi-plugin.toml
plugins/openai-format/: Cargo.toml
plugins/openai-format/src/: guest_macro.rs  lib.rs
plugins/openai/src/: guest.rs  lib.rs  logic.rs
plugins/openai/wit/: world.wit
plugins/opencode/: Cargo.toml  ryuzi-plugin.toml
plugins/opencode/src/: guest.rs  lib.rs  logic.rs
plugins/opencode/wit/: world.wit
(+796 files in other folders)
