[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "apps/cockpit/src-tauri"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
dirs = "5"
futures = "0.3"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
portable-pty = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
similar = "2"
specta = "2.0.0-rc.22"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs"] }
tokio-util = "0.7"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
