[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/plugin-sdk", "apps/cockpit/src-tauri"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
dirs = "5"
fd-lock = "4"
futures = "0.3"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
portable-pty = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
sha2 = "0.10"
similar = "2"
specta = "2.0.0-rc.22"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs"] }
tokio-util = "0.7"
toml = "0.8"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
