[package]
name = "ryuzi-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
name = "ryuzi_cli"
path = "src/lib.rs"

[[bin]]
name = "ryuzi"
path = "src/main.rs"

[dependencies]
ryuzi-core = { path = "../core" }
anyhow = "1"
clap = { version = "4", features = ["string"] }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"
