[package]
name = "ryuzi-cli"
version = "0.4.0"
edition.workspace = true
license.workspace = true

[lib]
name = "ryuzi_cli"
path = "src/lib.rs"

[[bin]]
name = "ryuzi"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ryuzi-core = { path = "../core", features = ["otel", "discord"] }
anyhow.workspace = true
clap = { version = "4", features = ["string"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures.workspace = true
async-trait.workspace = true
tempfile.workspace = true
dirs.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test.workspace = true
insta = "1"
