[package]
name = "ryuzi-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures.workspace = true
agent-client-protocol = { version = "1.0", features = ["unstable"] }
agent-client-protocol-schema = { version = "1.1", features = ["unstable"] }
specta = { workspace = true, features = ["derive", "serde_json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
deadpool-sqlite = { version = "0.8", features = ["rt_tokio_1"] }
rusqlite_migration = "1.2"
# Local worktree/init/commit only — clones go through the git CLI
# (provision_project), so the https/ssh default features (openssl-sys) are
# dead weight and the main obstacle to zigbuild cross-compilation.
git2 = { version = "0.21", default-features = false }
uuid = { version = "1", features = ["v4"] }
dirs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing = "0.1"
portable-pty.workspace = true
ureq = "2"
sha2 = "0.10"
base64 = "0.22"
url = "2"
sysinfo = "0.33"
croner = "2"
chrono.workspace = true
axum = "0.8"
reqwest = { workspace = true, default-features = true, features = ["json", "stream"] }
bytes = "1"
tokio-stream = "0.1"
toml_edit = "0.22"
opentelemetry = { version = "0.32.0", features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "metrics", "http-proto", "reqwest-blocking-client"], optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "builder", "collector"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true

[features]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
discord = ["dep:serenity"]
