[package]
name = "ryuzi-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ryuzi-plugin-sdk = { path = "../plugin-sdk" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures.workspace = true
specta = { workspace = true, features = ["derive", "serde_json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
deadpool-sqlite = { version = "0.8", features = ["rt_tokio_1"] }
rusqlite_migration = "1.2"
# Local worktree/init/commit only — clones go through the git CLI
# (provision_project), so the https/ssh default features (openssl-sys) are
# dead weight and the main obstacle to zigbuild cross-compilation.
git2 = { version = "0.21", default-features = false }
uuid = { version = "1", features = ["v4"] }
dirs.workspace = true
fd-lock.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing = "0.1"
portable-pty.workspace = true
ureq = "2"
sha2 = "0.10"
base64 = "0.22"
keyring = "=4.1"
chacha20poly1305 = "0.11"
url = "2"
# Strips Windows verbatim (\\?\) prefixes that fs::canonicalize adds and
# Url::from_file_path cannot round-trip. No-op on non-Windows.
dunce = "1"
sysinfo = "0.33"
croner = "2"
chrono.workspace = true
axum = "0.8"
# rustls, NOT default-features (= native-tls): reqwest's default-tls pulls
# openssl-sys on linux targets, which the macOS-hosted zigbuild cross-compiles
# in release.yml cannot build (this killed the v0.4.0 goreleaser job). Every
# other TLS consumer here (serenity, ureq, cockpit reqwest) is already rustls.
# http2 + charset keep the rest of the old default feature set.
reqwest = { workspace = true, features = ["rustls-tls", "http2", "charset", "json", "stream"] }
bytes = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
# Native agent runtime (harness/native): file-name globbing, gitignore-aware
# walking, ripgrep-style content search, and edit diffs.
globset.workspace = true
ignore.workspace = true
grep-searcher.workspace = true
grep-matcher.workspace = true
grep-regex.workspace = true
regex.workspace = true
similar.workspace = true
# Persistent memory (harness/native/memory): atomic file replacement.
tempfile.workspace = true
toml_edit = "0.22"
opentelemetry = { version = "0.32.0", features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "metrics", "http-proto", "reqwest-blocking-client"], optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "builder", "collector"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serial_test.workspace = true

[features]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
discord = ["dep:serenity"]
