[package]
name = "ryuzi-plugin-sdk"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Ryuzi plugin contract: manifest types, validation, and substitution"

[lints]
workspace = true

[dependencies]
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
