[package]
name = "ryuzi-runner"
version = "0.7.0"
edition.workspace = true
license.workspace = true

[lib]
name = "ryuzi_runner"
path = "src/lib.rs"

[[bin]]
name = "ryuzi"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ryuzi-core = { path = "../core", features = ["otel"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["signal"] }
async-trait.workspace = true
tempfile.workspace = true
dirs.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test.workspace = true
