# Shared, host-free Anthropic **Messages** wire logic for the first-party
# provider components (plugins/anthropic — x-api-key; plugins/anthropic-oauth —
# host-managed OAuth). Both speak the identical `/messages` wire shape and differ
# ONLY in which egress capability the guest calls, so the request-building,
# response-parsing and error-classification live here ONCE — extracted exactly
# the way `ryuzi-openai-format` was, and deliberately NOT folded into it because
# Anthropic is a genuinely different protocol (see this crate's lib.rs doc).
#
# `[workspace]` makes this its own workspace root, exactly like every
# `plugins/<id>/` bundle crate and the sibling `plugins/openai-format`. That is
# REQUIRED, not cosmetic: the repo root `Cargo.toml` is a workspace whose
# `members` list does not include anything under `plugins/`, so a package here
# that did NOT declare its own workspace would fail to build with "current
# package believes it's in a workspace when it's not". Declaring one also keeps
# each bundle independently buildable — the components depend on this crate by
# relative path, the mechanism for sharing code across sibling standalone
# workspaces.
[workspace]

[package]
name = "ryuzi-anthropic-format"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared Anthropic Messages wire logic (request shaping, response/model parsing, error classification) for Ryuzi's first-party Anthropic provider components."

# A plain rlib: the component crates are the `cdylib`s. Nothing here imports a
# WIT binding or touches a host, so `cargo test` in this directory covers the
# whole wire mapping natively, on any target.
[dependencies]
serde_json = "1"
