[workspace]

[package]
name = "ryuzi-plugin-anthropic-oauth"
version = "0.1.0"
edition = "2021"
publish = false
description = "First-party Anthropic (Claude subscription) provider component (ryuzi:provider/provider, authenticated through host-managed ryuzi:oauth)."

[lib]
crate-type = ["cdylib"]

# `wit-bindgen` is only invoked inside the `#[cfg(target_arch = "wasm32")]` guest
# module; the pure `logic` module and its native `cargo test` never touch the
# generated host bindings.
#
# `ryuzi-anthropic-format` is a path dependency on a sibling standalone workspace
# — the SAME Anthropic Messages wire logic the `anthropic` (x-api-key) component
# uses. This bundle differs only in egress (host-managed OAuth, not x-api-key)
# and in the Claude-subscription auth markers it adds in `logic`.
[dependencies]
wit-bindgen = "0.57"
ryuzi-anthropic-format = { path = "../anthropic-format" }

# `serde_json` is TEST-ONLY here: every wire body is built by
# `ryuzi-anthropic-format`; the only code in this crate that touches JSON is
# `logic`'s own tests, which re-parse what the shared crate produced. Keeping it
# out of `[dependencies]` drops a whole crate from the wasm build.
[dev-dependencies]
serde_json = "1"

[profile.release]
# Small, reproducible components: no debug info, abort on panic (a panicking
# guest is caught by the host fuel/epoch budget as a trap either way).
opt-level = "s"
lto = true
strip = true
panic = "abort"
