[workspace]

[package]
name = "ryuzi-plugin-anthropic"
version = "0.1.0"
edition = "2021"
publish = false
description = "First-party Anthropic (Claude Messages) provider component (ryuzi:provider/provider, authenticated through ryuzi:provider-auth)."

[lib]
crate-type = ["cdylib"]

# `wit-bindgen` is invoked inside the `#[cfg(target_arch = "wasm32")]` guest
# module; the pure `logic` module and its native `cargo test` never touch the
# generated host bindings.
#
# `serde_json` is a RUNTIME dependency here (unlike the OpenAI-format
# components, which delegate all JSON to the shared `ryuzi-openai-format`
# crate): `logic` builds and parses the Anthropic Messages wire bodies itself,
# so the wasm build genuinely needs it.
[dependencies]
wit-bindgen = "0.57"
serde_json = "1"

[profile.release]
# Small, reproducible components: no debug info, abort on panic (a panicking
# guest is caught by the host fuel/epoch budget as a trap either way).
opt-level = "s"
lto = true
strip = true
panic = "abort"
