[workspace]

[package]
name = "ryuzi-plugin-anthropic"
version = "0.1.0"
edition = "2021"
publish = false
description = "First-party Anthropic (Claude Messages) provider component (ryuzi:provider/provider, authenticated through ryuzi:provider-auth)."

[lib]
crate-type = ["cdylib"]

# `wit-bindgen` is invoked inside the `#[cfg(target_arch = "wasm32")]` guest
# module; the pure `logic` module and its native `cargo test` never touch the
# generated host bindings.
#
# `ryuzi-anthropic-format` is a path dependency on a sibling standalone
# workspace (see its Cargo.toml) — the mechanism for sharing the Anthropic
# Messages wire logic across the `anthropic` (x-api-key) and `anthropic-oauth`
# bundles. All request-building / response-parsing / error-classification lives
# there; this crate carries only the descriptor config + the OAuth-free egress
# glue.
[dependencies]
wit-bindgen = "0.57"
ryuzi-anthropic-format = { path = "../anthropic-format" }

# `serde_json` is TEST-ONLY here now: every wire body this component sends or
# parses is built by `ryuzi-anthropic-format`; the only code in this crate that
# touches JSON is `logic`'s own descriptor-pinning tests. Keeping it out of
# `[dependencies]` drops a whole crate from the wasm build.
[dev-dependencies]
serde_json = "1"

[profile.release]
# Small, reproducible components: no debug info, abort on panic (a panicking
# guest is caught by the host fuel/epoch budget as a trap either way).
opt-level = "s"
lto = true
strip = true
panic = "abort"
