[workspace]

[package]
name = "ryuzi-plugin-atlassian"
version = "0.1.0"
edition = "2021"
publish = false
description = "First-party Atlassian connector component (ryuzi:connector/connector): Jira + Confluence over one host-managed atlassian-cloud 3LO OAuth profile."

[lib]
crate-type = ["cdylib"]

# `wit-bindgen` is only invoked inside the `#[cfg(target_arch = "wasm32")]`
# guest module; the pure `logic` module (and its native `cargo test`) never
# touches the generated host bindings. `serde_json` is shared by both the pure
# request/response logic and the guest glue.
[dependencies]
wit-bindgen = "0.57"
serde_json = "1"

[profile.release]
# Small, reproducible components: no debug info, abort on panic (a panicking
# guest is caught by the host fuel/epoch budget as a trap either way).
opt-level = "s"
lto = true
strip = true
panic = "abort"
