[workspace]

[package]
name = "ryuzi-plugin-bitbucket"
version = "0.1.0"
edition = "2021"
publish = false
description = "First-party Bitbucket connector component (ryuzi:connector/connector): Bitbucket Cloud repos/pull requests/issues over a host-managed bitbucket-cloud OAuth 2.0 profile, distinct from the atlassian-cloud profile used by the Atlassian connector."

[lib]
crate-type = ["cdylib"]

# `wit-bindgen` is only invoked inside the `#[cfg(target_arch = "wasm32")]`
# guest module; the pure `logic` module (and its native `cargo test`) never
# touches the generated host bindings. `serde_json` is shared by both the pure
# request/response logic and the guest glue.
[dependencies]
wit-bindgen = "0.57"
serde_json = "1"

[profile.release]
# Small, reproducible components: no debug info, abort on panic (a panicking
# guest is caught by the host fuel/epoch budget as a trap either way).
opt-level = "s"
lto = true
strip = true
panic = "abort"
