# Shared, host-free OpenAI-chat wire logic for the first-party provider
# components (plugins/openai, plugins/groq, ...).
#
# `[workspace]` makes this its own workspace root, exactly like every
# `plugins/<id>/` bundle crate. That is REQUIRED, not cosmetic: the repo root
# `Cargo.toml` is a workspace whose `members` list does not include anything
# under `plugins/`, so a package here that did NOT declare its own workspace
# would fail to build with "current package believes it's in a workspace when
# it's not". Declaring one also keeps each bundle independently buildable and
# versionable — the components depend on this crate by relative path, which is
# the mechanism for sharing code across sibling standalone workspaces.
[workspace]

[package]
name = "ryuzi-openai-format"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared OpenAI-chat wire logic (request shaping, response/model parsing, error classification) for Ryuzi's first-party provider components."

# A plain rlib: the component crates are the `cdylib`s. Nothing here imports a
# WIT binding or touches a host, so `cargo test` in this directory covers the
# whole wire mapping natively, on any target.
[dependencies]
serde_json = "1"
