[workspace]

[package]
name = "ryuzi-plugin-opencode"
version = "0.1.0"
edition = "2021"
publish = false
description = "First-party OpenCode Zen free-tier provider component (ryuzi:provider/provider)."

[lib]
crate-type = ["cdylib"]

# `wit-bindgen` is only invoked inside the `#[cfg(target_arch = "wasm32")]`
# guest module; the pure `logic` module (and its native `cargo test`) never
# touches the generated host bindings.
[dependencies]
wit-bindgen = "0.57"
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
