[package]
name = "ryuzi-cockpit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
# `cargo run` (tauri dev) must pick the app, not the gen-bindings helper bin.
default-run = "ryuzi-cockpit"

[lib]
name = "ryuzi_cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ryuzi-core = { path = "../../../crates/core" }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
portable-pty.workspace = true
specta = { workspace = true, features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
anyhow.workspace = true
dirs.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["UI_ViewManagement", "Foundation"] }
windows-version = "0.1.7"
