[package]
name = "ryuzi-cockpit"
version = "0.3.0"
edition.workspace = true
license.workspace = true
# `cargo run` (tauri dev) must pick the app, not the gen-bindings helper bin.
default-run = "ryuzi-cockpit"

[lib]
name = "ryuzi_cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Dev-only gate for the gen-bindings helper bin below. Never enabled by
# `tauri build`, so the bundler skips the bin — without this gate the
# macOS `--target universal-apple-darwin` release build fails: tauri lipo's
# only the main app binary, then "Failed to copy binary .../gen-bindings"
# (this killed the cockpit-v0.1.0 release assets). Run it via the alias in
# the repo-root .cargo/config.toml: `cargo gen-bindings`.
gen-bindings = []

# Explicit [[bin]] so the required-features gate applies; tauri-cli's
# get_binaries honors required-features in both [[bin]] and src/bin
# auto-discovery paths, dropping the bin from bundling on every platform.
[[bin]]
name = "gen-bindings"
path = "src/bin/gen-bindings.rs"
required-features = ["gen-bindings"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ryuzi-core = { path = "../../../crates/core" }
ryuzi-plugin-sdk = { path = "../../../crates/plugin-sdk" }
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
portable-pty.workspace = true
specta = { workspace = true, features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
anyhow.workspace = true
chrono.workspace = true
base64 = "0.22"

[dev-dependencies]
tempfile.workspace = true
async-trait.workspace = true

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["UI_ViewManagement", "Foundation"] }
windows-version = "0.1.7"
