[package]
name = "ryuzi-cockpit"
version = "0.5.0"
edition.workspace = true
license.workspace = true
# `cargo run` (tauri dev) must pick the app, not the gen-bindings helper bin.
default-run = "ryuzi-cockpit"

[lib]
name = "ryuzi_cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Dev-only gate for the gen-bindings helper bin below. Never enabled by
# `tauri build`, so the bundler skips the bin — without this gate the
# macOS `--target universal-apple-darwin` release build fails: tauri lipo's
# only the main app binary, then "Failed to copy binary .../gen-bindings"
# (this killed the cockpit-v0.1.0 release assets). Run it via the alias in
# the repo-root .cargo/config.toml: `cargo gen-bindings`.
gen-bindings = []

# Explicit [[bin]] so the required-features gate applies; tauri-cli's
# get_binaries honors required-features in both [[bin]] and src/bin
# auto-discovery paths, dropping the bin from bundling on every platform.
[[bin]]
name = "gen-bindings"
path = "src/bin/gen-bindings.rs"
required-features = ["gen-bindings"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ryuzi-core = { path = "../../../crates/core" }
ryuzi-plugin-sdk = { path = "../../../crates/plugin-sdk" }
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
reqwest = { workspace = true, features = ["rustls-tls", "json", "stream"] }
# Remote-runner pinned TLS (Phase 3): IDENTICAL to crates/core/Cargo.toml's
# rustls line. reqwest's `use_preconfigured_tls` downcasts the ClientConfig
# via `Any` — if this resolves to a different rustls version/features than
# the one reqwest was built against, the downcast silently fails and falls
# back to default TLS, bypassing the pin with no compile/runtime error. Keep
# in lockstep with core; verify with `cargo tree -p ryuzi-cockpit -i rustls`
# after any bump (must show exactly one 0.23.x). ring-only — see core's note;
# verify `cargo tree -p ryuzi-cockpit -i aws-lc-rs`/`-i aws-lc-sys` (absent).
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures.workspace = true
portable-pty.workspace = true
specta = { workspace = true, features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
anyhow.workspace = true
chrono.workspace = true
base64 = "0.22"

[dev-dependencies]
tempfile.workspace = true
async-trait.workspace = true

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["UI_ViewManagement", "Foundation"] }
windows-version = "0.1.7"
